# flir_camera_driver

./: .gitignore
flir_camera_description/: CMakeLists.txt
flir_camera_msgs/: CMakeLists.txt
script/: flir_install.sh
spinnaker_camera_driver/: CMakeLists.txt  package.xml
spinnaker_camera_driver/cmake/: download_spinnaker
spinnaker_camera_driver/config/: firefly_ffy_u3162c.yaml
spinnaker_camera_driver/doc/: index.rst
spinnaker_camera_driver/include/spinnaker_camera_driver/: camera.hpp  camera_driver.hpp  diagnostic_levels.hpp  lifecycle_types.hpp  utils.hpp
spinnaker_camera_driver/launch/: driver_node.launch.py  gige_node.launch.py
spinnaker_camera_driver/src/: camera.cpp  camera_driver.cpp  spinnaker_wrapper.cpp  spinnaker_wrapper_impl.cpp  spinnaker_wrapper_impl.hpp
spinnaker_synchronized_camera_driver/: CMakeLists.txt
spinnaker_synchronized_camera_driver/include/spinnaker_synchronized_camera_driver/: exposure_controller_factory.hpp  follower_exposure_controller.hpp  master_exposure_controller.hpp  synchronized_camera_driver.hpp
spinnaker_synchronized_camera_driver/src/: exposure_controller_factory.cpp  follower_exposure_controller.cpp  master_exposure_controller.cpp  synchronized_camera_driver.cpp
src/doc/: conf.py  index.rst
src/flir_camera_description/: CMakeLists.txt
src/flir_camera_msgs/: CMakeLists.txt
src/spinnaker_camera_driver/: CMakeLists.txt  rosdoc2.yaml
src/spinnaker_camera_driver/cmake/: spinnaker_camera_driverConfig.cmake.in
src/spinnaker_synchronized_camera_driver/: CMakeLists.txt  package.xml
(+27 files in other folders)
